--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,10 +30,7 @@
 
       <%= f.submit '登録', class: 'btn btn-primary w-100' %>
     <% end %>
-  </div>
-</div>
-<div class='row'>
-  <div class='offset-sm-3'>
-    <p>アカウントをお持ちの場合は<%#= link_to 'ログイン', login_path %></p>
+    
+    <p>アカウントをお持ちの場合は <%= link_to 'ログイン', login_path %></p>
   </div>
 </div>
