--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -5,6 +5,7 @@
     <div class="text-center text-white">
       <h1>つぶやきへようこそ！</h1>
       <%= link_to 'ユーザ登録', signup_path, class: 'btn btn-lg btn-primary' %>
+      <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
     </div>
   </div>
 <% end %>
