--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -4,6 +4,6 @@
   </aside>
   <div class='col-sm-8'>
     <%= render 'users/plofile_tabs', user: @user %>
-    <%= render 'posts/posts', posts: @posts %>
+    <%= render 'users/users', users: @followers %>
   </div>
 </div>
