--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -12,7 +12,7 @@
           </div>
           <div>
             <% if current_user == post.user %>
-              <%= link_to "削除", post, method: :delete, data: { confirm: "本当に削除しますか？" }, class: 'btn btn-danger btn-sm' %>
+              <%= link_to "削除", post, method: :delete, data: { confirm: "本当に削除しますか？" }, class: 'btn btn-outline-danger btn-sm' %>
             <% end %>
           </div>
         </div>
