--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -10,10 +10,11 @@
           <div>
             <p><%= post.content %></p>
           </div>
-          <div>
+          <div class='btn-group'>
             <% if current_user == post.user %>
-              <%= link_to "削除", post, method: :delete, data: { confirm: "本当に削除しますか？" }, class: 'btn btn-outline-danger btn-sm' %>
+              <%= link_to "削除", post, method: :delete, data: { confirm: "本当に削除しますか？" }, class: 'btn btn-danger btn-sm' %>
             <% end %>
+              <%= render 'favorites/favorite_button', post: post %>
           </div>
         </div>
       </li>
