--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
               <li class="ms-3"><%= link_to 'ユーザ一覧', users_path, class: 'nav-link' %></li>
             </ul>
             <ul class="navbar-nav">
-              <li class="ms-3"><%= link_to 'メッセージ', messages_path(current_user), class: 'nav-link' %></li>
+              <li class="ms-3"><%= link_to 'メッセージ', messages_path, class: 'nav-link' %></li>
             </ul>
             <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><%= current_user.name %></button>
             <ul class="dropdown-menu dropdown-menu-end">
