--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -32,6 +32,7 @@
   </div>
   <aside class='col-sm-6'>
     <%= form_with(model:@message, url: messages_path) do |f| %>
+      <%= display_validation_errors('content','content') %>
       <div class='mb-3'>
         <%= f.text_area :content, class: 'form-control', rows: 5 %>
         <%= f.hidden_field :user_id, value: current_user.id %>
