--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,6 +40,7 @@
   </div>
   <aside class='col-sm-6'>
     <%= form_with(model:[@post, @comment], method: :post) do |f| %>
+      <%= display_validation_errors('content','content') %>
       <div class='mb-3'>
         <%= f.text_area :content, class: 'form-control', rows: 5 %>
         <%= f.hidden_field :post_id, value: @post.id %>
